finally got a working hello world

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ididreactdocs</title>
 
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
@@ -15,7 +16,7 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
     ></script>
 
-    <script defer>
+    <script type="text/babel" defer>
       ReactDOM.render(<h1>Hello, world!</h1>, document.getElementById("root"));
     </script>
   </head>
