--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
     ></script>
 
     <script type="text/babel" defer>
-      ReactDOM.render(<h1>Hello, world!</h1>, document.getElementById("root"));
+      function tick() {
+        const el = (
+          <div>
+            <h1>hello world!</h1>
+            <h2>it's {new Date().toLocaleTimeString()}</h2>
+          </div>
+        );
+        ReactDOM.render(el, document.getElementById('root'))
+      }
+
+      setInterval(tick, 1000);
     </script>
   </head>
   <body>
