--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
           this.state = {
             toggle: false,
           };
-          this.handleClick = this.handleClick.bind(this);
         }
 
         handleClick() {
@@ -63,7 +62,7 @@
           return (
             <div>
               <p>{this.state.toggle ? "teru" : "fales"}</p>
-              <button onClick={this.handleClick}>click me</button>
+              <button onClick={() => this.handleClick()}>click me</button>
             </div>
           );
         }
