--- a/index.html
+++ b/index.html
@@ -17,66 +17,18 @@
     ></script>
 
     <script type="text/babel" defer>
-      function Greeting(props) {
-        const isLoggedIn = props.isLoggedIn;
-        if (isLoggedIn) {
-          return <h1>Welcome back</h1>;
-        }
-        return <h1>Please login</h1>;
+      function NumberedList(props) {
+        const numbers = props.numbers;
+        const listItems = numbers.map((n) => <li key={n.toString()}>{n}</li>);
+
+        return <ol>{listItems}</ol>;
       }
 
-      function ButtonLoggedIn(props) {
-        if (props.prevent) {
-          return null;
-        }
-        return <button onClick={props.onClick}>Logout</button>;
-      }
-
-      function ButtonLoggedOut(props) {
-        return <button onClick={props.onClick}>Login</button>;
-      }
-
-      class LoginControl extends React.Component {
-        constructor(props) {
-          super(props);
-          this.state = {
-            isLoggedIn: false,
-          };
-
-          this.handleLogin = this.handleLogin.bind(this);
-          this.handleLogout = this.handleLogout.bind(this);
-        }
-
-        handleLogin() {
-          this.setState({ isLoggedIn: true });
-        }
-
-        handleLogout() {
-          this.setState({ isLoggedIn: false });
-        }
-
-        render() {
-          let button;
-          if (this.state.isLoggedIn) {
-            button = <ButtonLoggedIn onClick={this.handleLogout} />;
-          } else {
-            button = <ButtonLoggedOut onClick={this.handleLogin} />;
-          }
-
-          return (
-            <div>
-              <Greeting isLoggedIn={this.state.isLoggedIn} />
-              {this.state.isLoggedIn ? (
-                <ButtonLoggedIn prevent={true} onClick={this.handleLogout} />
-              ) : (
-                <ButtonLoggedOut onClick={this.handleLogin} />
-              )}
-            </div>
-          );
-        }
-      }
-
-      ReactDOM.render(<LoginControl />, document.getElementById("root"));
+      const numbers = [1, 2, 3, 4, 69];
+      ReactDOM.render(
+        <NumberedList numbers={numbers} />,
+        document.getElementById("root")
+      );
     </script>
   </head>
   <body>
